# optisystemize

./: .env  .env.example  .gitignore  README.md  download_real_images.py  generate_samples.py  pyproject.toml  requirements.txt
src/coworker/: cli.py
src/coworker/core/: config.py  export.py  extract.py  i18n.py  ingest.py  models.py  organize.py  storage.py  telemetry.py  wizard.py
src/coworker/i18n/: en.yml  ru.yml
sroie_test/: manifest.jsonl  master.xlsx
sroie_test/outputs/: master.xlsx
terminal_coworker/: main.py  models.py  utils.py
terminal_coworker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
terminal_coworker/core/: export.py  extract.py  organize.py
test_adhoc/.coworker/: manifest.jsonl
test_adhoc/.coworker/runs/: 20260129_121517.json
tests/: repro_v2_1.py  test_i18n.py
