[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coworker"
version = "0.1.0"
description = "Your personal AI documentation assistant"
authors = [
  { name = "Optimatrix", email = "info@optimatrix.uz" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]",
    "pydantic>=2.0",
    "google-genai",
    "pandas",
    "openpyxl",
    "pillow",
    "python-dotenv",
    "tqdm",
    "pyyaml"
]

[project.urls]
"Homepage" = "https://github.com/OtabekOrtikov/optisystemize"

[project.scripts]
coworker = "coworker.cli:app"

[tool.setuptools.packages.find]
where = ["src"]